# rust_openai

./: .gitignore  Cargo.toml  README.md  TODO.md
booker/: Cargo.toml
booker/src/: main.rs  types.rs
booker/src/steps/: book_statement.rs  combine_chapters.rs  design_spine.rs  generate_chapter.rs  generate_chapter_outlines.rs  generate_summary.rs  mod.rs  project_init.rs  rebuild_outline_json.rs
booker/srcs/steps/: generate_chapter.rs
examples/: booker.rs  embedder.rs  json_schema_test.rs  live_api_test.rs  multi_provider.rs  single_request.rs
src/: cache.rs  embedding.rs  generate.rs  json.rs  json_ext.rs  lib.rs  llm.rs  request.rs
src/llm/: client.rs
src/llm/claude/: mod.rs
src/llm/openai/: mod.rs
src/llm/provider/: mod.rs
src/types/: assistant_message.rs  billing.rs  chat_completion_choice.rs  chat_completion_object.rs  chat_request.rs  error.rs  finish_reason.rs  function_call_item.rs  json_schema.rs  json_schema_prop.rs  logit_bias.rs  message.rs  metadata.rs  mod.rs  model.rs  model_id.rs  reasoning.rs  response_format.rs  system_message.rs  text_format.rs  tool.rs  tool_call.rs  tool_choice.rs  tool_function.rs  tool_message.rs  usage_stats.rs  user_message.rs
tests/: multi_provider.rs
