[package]
name = "rust_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
ring = "0.17.7"
data-encoding = "2.5.0"
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1.4.0"