[package]
name = "rust_openai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.9.6", features = ["json"] }
dotenv = "0.15.0"
ring = "0.17.7"
data-encoding = "2.5.0"
rand = "0.8"
schemars = "0.8"
snafu = "0.8"
anyhow = "1.0.38"


[dev-dependencies]
pretty_assertions = "1.4.0"