[package]
name = "booker"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_openai = { path = ".." }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
ring = "0.17.7"
data-encoding = "2.5.0"
rand = "0.8"
schemars = "0.8"
snafu = "0.8"
async-trait = "0.1"
anyhow = "1.0.38"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.5"
